Small styling fix for done Alerts on mobile

--- a/src/Alert/components/_Alert.scss
+++ b/src/Alert/components/_Alert.scss
@@ -233,7 +233,7 @@
     }
 
     // Done
-    &.info, &.info_outline {
+    &.done {
       background-color: darken($available-color, 10%);
       .alertText, .alertTitle {
         color: $text-color-reverse;
